--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Project": {
+        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDB; Database=MyCompany; Persist Security Info=false; User ID='sa'; Password='ka'; MultipleActiveResultSets=True; Trusted_Connection=False;",
+        "CompanyName": "Кирюха Kirill Korelskiy Industies",
+        "CompanyPhone": "+7 (905) 372-93-57",
+        "CompanyPhoneShort": "+79053729357",
+        "CompanyEmail": "korelskiy.kirill@mail.ru"
     }
-  },
-  "AllowedHosts": "*"
 }
